syntax = "proto3";
package pb;

import "user.proto";
import "permissions.proto";

option go_package = "github.com/Remxin/home-life/server/pb";

message AddToFamilyRequest {
    string family_id = 1;
    string user_id = 2;
    bool can_read = 3;
    bool can_edit = 4;
    bool can_create = 5;
    bool can_modify = 6;
}

message AddToFamilyResponse {
    User user = 1;
    Permissions permissions = 2;
}