syntax = "proto3";
package pb;

import "task.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/Remxin/home-life/server/pb";

enum SearchBy {
    FAMILY_ID = 0;
    ASSIGNED_TO = 1;
}

message GetTasksRequest {
    SearchBy search_by = 1;
    google.protobuf.Timestamp date_from = 2;
    google.protobuf.Timestamp date_to = 3;
}

message GetTasksResponse {
    repeated Task task = 1;
}